solved overflow issues

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  width: 100vw;
+  /* width: 100vw; */
   overflow-x: hidden;
   box-sizing: border-box;
 }
